--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,29 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.1rem;
+
+}
+
+.h_text {
+    padding: 5px;
+    background-color: red;
 }
 
 .navbar{
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: solid 1px red;
+    display: flex;
     position: sticky;
     padding: 20px;
-    background-color: bisque;
+}
+
+.main_Name {
+    color: white;
+    padding: 5px;
+    background-color: red;
 }
 
 .navData{
@@ -18,4 +35,25 @@
 .navData:hover{
     cursor: pointer;
     color: black;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    display: flex;
+    background-color: red;
+}
+
+.footer_text {
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+main {
+    display: flex;
+    margin: 20px;
 }
