--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,51 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.1rem;
+
+}
+
+.h_text {
+    padding: 5px;
+    background-color: red;
 }
 
 .navbar{
     position: sticky;
     padding: 20px;
     background-color: bisque;
+    justify-content: space-between;
+    padding: 10px;
+    border-bottom: solid 1px red;
+    display: flex;
+}
+
+.main_Name {
+    color: white;
+    padding: 5px;
+    background-color: red;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    display: flex;
+    background-color: red;
+}
+
+.footer_text {
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+main {
+    display: flex;
+    margin: 20px;
 }
 
 .navData{
