--- a/css/style.css
+++ b/css/style.css
@@ -10,35 +10,27 @@
 
 .h_text {
     padding: 5px;
-    background-color: red;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1rem;
 
 }
 
-.h_text {
-    padding: 5px;
-    background-color: red;
-}
-
 .navbar{
     justify-content: space-between;
     padding: 10px;
-    border-bottom: solid 1px red;
     display: flex;
     position: sticky;
     padding: 20px;
-    background-color: bisque;
+    background-color: rgb(109, 24, 24);
     justify-content: space-between;
     padding: 10px;
-    border-bottom: solid 1px red;
     display: flex;
 }
 
 .main_Name {
     color: white;
     padding: 5px;
-    background-color: red;
+    
 }
 
 .footer {
@@ -60,12 +52,6 @@ a {
 main {
     display: flex;
     margin: 20px;
-}
-
-.main_Name {
-    color: white;
-    padding: 5px;
-    background-color: red;
 }
 
 .navData{
@@ -75,25 +61,4 @@ main {
 .navData:hover{
     cursor: pointer;
     color: black;
-}
-
-.footer {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    display: flex;
-    background-color: red;
-}
-
-.footer_text {
-    color: white;
-}
-
-a {
-    color: white;
-}
-
-main {
-    display: flex;
-    margin: 20px;
 }
