--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 }
 
 .Landing_image{
+    display: flex;
+    justify-content: center;
     width: 600px;
     height: 750px;
 }
@@ -47,6 +49,7 @@
 }
 
 .footer_text {
+    margin: 100px 0 0 0;
     color: white;
 }
 
