--- a/css/style.css
+++ b/css/style.css
@@ -7,49 +7,52 @@
     font-size: 1.1rem;
 
 }
-
 .Landing_image{
     position: relative;
-    width: 1500px;
-    height: 1200px;
+    margin: 0;
+    width: 1450px;
+    height: 1000px;
 }
 
 .navbar{
+    display: inline-block;
+    margin: 0;
     background-color: rgb(109, 24, 24);
 }
 
+
 .navbar .h_text {
-    padding: 5px;
+    display: inline-flex;
+    margin: 10px 0 10px 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1rem;
 
 }
 
-.navbar .main_Name{
+.navbar .main-Name{
+    display: inline-flex;
+    margin-right: 999.5px;
     justify-content: space-between;
-    padding: 10px;
-    display: flex;
-    position: sticky;
     padding: 20px;
-    background-color: rgb(109, 24, 24);
 }
 
-.main_Name {
+header .navbar .serach-bar{
+    padding: 10px;
+}
+
+.main-Name {
     color: white;
     padding: 5px;
     
 }
 
 .footer {
-    display: flex;
-    justify-content: space-between;
     padding: 10px;
     display: flex;
-    background-color: red;
+    background-color: rgb(109, 24, 24);
 }
 
 .footer_text {
-    margin: 100px 0 0 0;
     color: white;
 }
 
