--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@
 
 .navbar .h_text {
     display: inline-flex;
-    margin: 10px 0 10px 10px;
+    padding-right: 10px;
+    margin-right: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1rem;
 
@@ -31,7 +32,7 @@
 
 .navbar .main-Name{
     display: inline-flex;
-    margin-right: 999.5px;
+    margin-right: 950px;
     justify-content: space-between;
     padding: 20px;
 }
@@ -56,20 +57,16 @@ header .navbar .serach-bar{
     color: white;
 }
 
-a {
+a{
     color: white;
+}
+
+header .navbar a:hover{
+    color: black;
+    cursor: pointer;
 }
 
 main {
     display: flex;
     margin: 20px;
-}
-
-.navData{
-    color: white;
-    text-decoration: none;
-}
-.navData:hover{
-    cursor: pointer;
-    color: black;
 }
