--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,69 @@
-*{
+/**{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     text-decoration: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 1.1rem;
 
-}
-.Landing_image{
-    position: relative;
+}*/
+body{
     margin: 0;
-    width: 1450px;
-    height: 1000px;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar{
-    display: inline-block;
+   position: fixed;
+   top:0;
+   left:0;
+   width: 100%;
+   height: 100px;
+   padding: 10px 90px;
+   box-sizing: border-box;
+   background: rgba(0,0,0,0);
+   animation: scroll-transition;
+   animation-timeline: scroll(y);
+}
+
+.navbar .logo{
+    padding: 5px 5px;
+    height: 80px;
+    float: left;
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    animation: scroll-transition;
+    animation-timeline: scroll(y);
+    background-color: rgba(0,0,0,0);
+}
+
+.navbar ul{
+    list-style:none;
+    float: right;
     margin: 0;
-    background-color: rgb(109, 24, 24);
+    padding: 0;
+    display: flex;
 }
 
-
-.navbar .h_text {
-    display: inline-flex;
-    padding-right: 17px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.1rem;
-
-}
-
-.navbar .main-Name{
-    display: inline-flex;
-    margin-right: 870px;
-    justify-content: space-between;
-    padding: 20px;
+.navbar ul li a{
+    line-height: 80px;
+    padding: 10px;
+    text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    animation: scroll-transition;
+   animation-timeline: scroll(y);
 }
 
 header .navbar .serach-bar{
     padding: 10px;
+    height: 80px;
+    
 }
 
-.main-Name {
+.logo {
     color: white;
     padding: 5px;
     
@@ -61,12 +84,29 @@ a{
 }
 
 header .navbar a:hover{
-    color: black;
     cursor: pointer;
-    background-color: brown;
+    background: rgba(0,0,0,0.6);
+    border-radius: 10px;
 }
 
-main {
-    display: flex;
-    margin: 20px;
+.background-image{
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+@keyframes scroll-transition{
+0%{
+    background: rgba(0,0,0,0);
+    color: rgb(255,0,0);
+}
+0.1%{
+    background: rgba(255,4,4,0.5);
+    color: #fff;
+}
+100%{
+    background: rgba(255,0,0);
+    color: #fff;
+}
 }
